tests/NormalTests/paczka1/fuzzy1/21811872.err
Error in line 1: IYDK3GrXq A205 23,4
Error in line 14: httafJr A322 20,8
Error in line 35: lbeLAR A322 96,5
